<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jorgesoasti.formulariocontactos.ConfirmaContacto"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tvNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_completo"/>

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_nacimiento"/>

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/tvDescContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_contacto"/>

    <Button
        android:id="@+id/btnBotonEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_marginTop="20dp"
        android:theme="@style/MiBotonRaised"/>

</LinearLayout>
