<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.jorgesoasti.formulariocontactos.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtNombreCompleto"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/nombre_completo"
                android:layout_marginBottom="10dp">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"/>

        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"
            android:layout_marginBottom="10dp">
        </DatePicker>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtTelefono"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/telefono"
                android:layout_marginBottom="10dp">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_marginBottom="10dp">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDescripcionContacto"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/descripcion_contacto"
                android:layout_marginBottom="10dp">

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnBotonSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:layout_below="@+id/tvTitulo"
            android:theme="@style/MiBotonRaised"/>

    </LinearLayout>

</ScrollView>
